--- a/PedometerAlarm/AndroidManifest.xml
+++ b/PedometerAlarm/AndroidManifest.xml
@@ -47,7 +47,7 @@
                     android:scheme="jp.syoboi.pm2hg" />
             </intent-filter>
         </activity>
-        
+
         <!-- 設定 -->
         <activity android:name="jp.syoboi.android.pedometeralarm.activity.SettingActivity_" />
 
@@ -58,6 +58,7 @@
         <receiver android:name=".receiver.MyReceiver_" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.HEADSET_PLUG" />
             </intent-filter>
         </receiver>
     </application>
